--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -8,6 +8,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 99;
 }
 
 .sidebar {
